--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "plaid": "^8.1.6",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
+    "react-calendar": "^3.3.1",
     "react-dom": "^17.0.1",
     "react-plaid-link": "^3.1.0",
     "react-redux": "^7.2.2",
